[package]
name = "cvrp-aco-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.0-rc.11", features = ["derive"] }
anyhow = "1.0.52"
regex = "1.5.4"
rand = "0.8.4"
nom = "7.1.0"
strum = { version = "0.23.0", features = ["derive"] }
yoos = { path = "../yoos" }

[dev-dependencies]
yoos = { path = "../yoos", features = ["collections-extra-traits"] }
